Trying to fix a mobile off-canvas issue using the add-off-canvas-wrap-height mixin

--- a/docs/src/scss/custom/_custom.scss
+++ b/docs/src/scss/custom/_custom.scss
@@ -187,6 +187,8 @@ body {
   }
 }
 
+@include add-off-canvas-wrap-height('oc-aside-nav-mobile');
+
 /**
  * More Icon
  */
